# wasmtime-zephyr

./: .gitignore  Kconfig  README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/src/: main.c  wasmtime-platform.c  wasmtime_syscalls.c  wasmtime_syscalls.h
include/: app.h
wasmtime/: Cargo.toml
wasmtime/src/: global_allocator.rs  i2c.rs  lib.rs  panic.rs  sample.wat
wasmtime/wit/: world.wit
zephyr/: module.yml
